using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;

namespace Define
{
    public class Trigger
    {
        static public readonly string Jump  = "Car_Jump";
        static public readonly string Base  = "Car_Base";
        static public readonly string Level1    = "Car_Level1";
        static public readonly string Destroy   = "Car_Destroy";
    }

    public class Tag
    {
        static public readonly string Character = "Character";
    }
}
